// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Card content 1`] = `
.emotion-8 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  overflow: hidden;
  max-width: 345px;
}

.emotion-4 {
  padding: 16px;
}

.emotion-4:last-child {
  padding-bottom: 24px;
}

.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-2 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  color: rgba(0,0,0,0.54);
}

<div
  className="emotion-6 emotion-7 emotion-8 emotion-9"
  elevation={1}
>
  <div
    className="emotion-4 emotion-5"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Golden Gate Bridge
    </h2>
    <p
      className="emotion-2 emotion-1"
    >
      The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Card divider 1`] = `
.emotion-24 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  overflow: hidden;
  max-width: 345px;
}

.emotion-2 {
  padding: 16px;
}

.emotion-2:last-child {
  padding-bottom: 24px;
}

.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.17;
  -webkit-letter-spacing: 0.00735em;
  -moz-letter-spacing: 0.00735em;
  -ms-letter-spacing: 0.00735em;
  letter-spacing: 0.00735em;
  margin-bottom: 0.35em;
}

.emotion-4 {
  width: calc(100% - 32px);
  margin: 0 auto;
  height: 2px;
  background: #ddd;
}

.emotion-6 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  margin-bottom: 0.35em;
}

.emotion-10 {
  width: calc(100% - 32px);
  margin: 0 auto;
  height: 5px;
  background: #ddd;
}

.emotion-16 {
  width: calc(100% - 32px);
  margin: 0 auto;
  height: 10px;
  background: #ddd;
}

<div
  className="emotion-22 emotion-23 emotion-24 emotion-25"
  elevation={1}
>
  <div
    className="emotion-2 emotion-3"
  >
    <h2
      className="emotion-0 emotion-1"
    >
      Dividers
    </h2>
  </div>
  <div
    className="emotion-4 emotion-5"
  />
  <div
    className="emotion-2 emotion-3"
  >
    <h3
      className="emotion-6 emotion-1"
    >
      thickness=2 (default)
    </h3>
  </div>
  <div
    className="emotion-10 emotion-5"
  />
  <div
    className="emotion-2 emotion-3"
  >
    <h3
      className="emotion-6 emotion-1"
    >
      thickness=5
    </h3>
  </div>
  <div
    className="emotion-16 emotion-5"
  />
  <div
    className="emotion-2 emotion-3"
  >
    <h3
      className="emotion-6 emotion-1"
    >
      thickness=10
    </h3>
  </div>
</div>
`;

exports[`Storyshots Components|Card media 1`] = `
.emotion-11 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  overflow: hidden;
  max-width: 345px;
}

.emotion-7 {
  padding: 16px;
}

.emotion-7:last-child {
  padding-bottom: 24px;
}

.emotion-3 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-5 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  color: rgba(0,0,0,0.54);
}

.emotion-1 {
  display: block;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 140px;
}

<div
  className="emotion-9 emotion-10 emotion-11 emotion-12"
  elevation={1}
>
  <div
    className="emotion-0 emotion-1 emotion-2"
    style={
      Object {
        "backgroundImage": "url(\\"/images/bridge.jpg\\")",
      }
    }
    title="Golden Gate Bridge"
  />
  <div
    className="emotion-7 emotion-8"
  >
    <h2
      className="emotion-3 emotion-4"
    >
      Golden Gate Bridge
    </h2>
    <p
      className="emotion-5 emotion-4"
    >
      The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Card raised 1`] = `
.emotion-7 {
  padding: 16px;
}

.emotion-7:last-child {
  padding-bottom: 24px;
}

.emotion-3 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-5 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  color: rgba(0,0,0,0.54);
}

.emotion-1 {
  display: block;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 140px;
}

.emotion-11 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
  overflow: hidden;
  max-width: 345px;
}

<div
  className="emotion-9 emotion-10 emotion-11 emotion-12"
  elevation={3}
>
  <div
    className="emotion-0 emotion-1 emotion-2"
    style={
      Object {
        "backgroundImage": "url(\\"/images/bridge.jpg\\")",
      }
    }
    title="Golden Gate Bridge"
  />
  <div
    className="emotion-7 emotion-8"
  >
    <h2
      className="emotion-3 emotion-4"
    >
      Golden Gate Bridge
    </h2>
    <p
      className="emotion-5 emotion-4"
    >
      The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
    </p>
  </div>
</div>
`;
